Name:                server
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable server
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    snap-extras               >= 0.11  && < 0.12,
    async                     >= 2.0   && < 2.1,
    aeson                     >= 0.10  && < 0.11,
    transformers              >= 0.4   && < 0.5,
    stm                       >= 2.4   && < 2.5,
    http-conduit              >= 2.1   && < 2.2,
    filepath                  >= 1.4   && < 1.5

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -eventlog
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
