Name:                flashair-receive
Version:             0.1
Synopsis:            Server for the flashair-push utility
Description:         Receives a path from remote server and attempts to download.
License:             AllRightsReserved
Author:              D F A Ligertwood
Maintainer:          douglas@dfal.xyz
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable flashair-receive
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     >= 0.10  && < 0.11,
    async                     >= 2.0   && < 2.1,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    filepath                  >= 1.4   && < 1.5,
    http-conduit              >= 2.1   && < 2.2,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    snap-extras               >= 0.11  && < 0.12,
    stm                       >= 2.4   && < 2.5,
    transformers              >= 0.4   && < 0.5,
    unix                      >= 2.7   && < 2.8

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -eventlog
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
